package ex42;

public class Record {

    public String LastName;
    public String FirstName;
    public int Salary;
}