@startuml
'https://plantuml.com/sequence-diagram

class App
{
    public static void main(String[] args)
    public static Record[] createRecords(List<String> lines)
}

class Record
{
    public String LastName
    public String FirstName
    public int Salary
}

App --|> Record
Record --|> App

@enduml